// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Key renders correct with multiple characters 1`] = `
<button
  className="flex items-center justify-center p-2 sm:p-3 md:p-5 max-h-12 min-w-max rounded-md text-md lg:text-xl font-semibold transition-colors border hover:cursor-pointer hover:border-gray-400 "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  ENTER
</button>
`;

exports[`Key renders correct with svg 1`] = `
<button
  className="flex items-center justify-center p-2 sm:p-3 md:p-5 max-h-12 min-w-max rounded-md text-md lg:text-xl font-semibold transition-colors border hover:cursor-pointer hover:border-gray-400 "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <svg
    className="h-5"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M6.707 4.879A3 3 0 018.828 4H15a3 3 0 013 3v6a3 3 0 01-3 3H8.828a3 3 0 01-2.12-.879l-4.415-4.414a1 1 0 010-1.414l4.414-4.414zm4 2.414a1 1 0 00-1.414 1.414L10.586 10l-1.293 1.293a1 1 0 101.414 1.414L12 11.414l1.293 1.293a1 1 0 001.414-1.414L13.414 10l1.293-1.293a1 1 0 00-1.414-1.414L12 8.586l-1.293-1.293z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`Key renders correctly with single character 1`] = `
<button
  className="flex items-center justify-center p-2 sm:p-3 md:p-5 max-h-12 min-w-[2rem] rounded-md text-md lg:text-xl font-semibold transition-colors border hover:cursor-pointer hover:border-gray-400 "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  A
</button>
`;
